force-app/main/default/objects/QA_Test_Case__c/QA_Test_Case__c.object-meta.xml
<CustomObject>
    <description>QAForce2 Test Case Object</description>
    <label>Test Case</label>
    <nameField>
        <displayFormat>TC-{00000000}</displayFormat>
        <label>Test Case Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Cases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>