force-app/main/default/objects/QA_Test_Case__c/fields/Brief_Description__c.field-meta.xml
<CustomField>
    <fullName>Brief_Description__c</fullName>
    <label>Brief Description</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>