force-app/main/default/objects/QA_Test_Case__c/fields/Count_Automated_Executions__c.field-meta.xml
<CustomField>
    <fullName>Count_Automated_Executions__c</fullName>
    <description>Count the number of completed automated executions</description>
    <inlineHelpText>Count the number of completed automated executions</inlineHelpText>
    <label>Count Automated Executions</label>
    <summaryFilterItems>
        <field>QA_Test_Execution__c.Type__c</field>
        <operation>equals</operation>
        <value>Ftest, Silktest, Utest, .Net, Client Automation, Selenium, ProdTest - Extended, ProdTest - API, ProdTest - Selenium</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>QA_Test_Execution__c.Status__c</field>
        <operation>equals</operation>
        <value>Passed, Failed</value>
    </summaryFilterItems>
    <summaryForeignKey>QA_Test_Execution__c.Test_Case__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>