force-app/main/default/objects/QA_Test_Case__c/fields/Execution_Type__c.field-meta.xml
<CustomField>
    <fullName>Execution_Type__c</fullName>
    <label>Execution Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Manual</fullName>
                <default>true</default>
                <label>Manual</label>
            </value>
            <value>
                <fullName>Automated</fullName>
            </value>
            <value>
                <fullName>End To End</fullName>
            </value>
            <value>
                <fullName>Boundary</fullName>
            </value>
            <value>
                <fullName>Upgrade Script</fullName>
            </value>
            <value>
                <fullName>Sanity</fullName>
            </value>
            <value>
                <fullName>Silktest</fullName>
            </value>
            <value>
                <fullName>Utest</fullName>
            </value>
            <value>
                <fullName>.Net</fullName>
            </value>
            <value>
                <fullName>CTI - script</fullName>
            </value>
            <value>
                <fullName>Client Automation</fullName>
            </value>
            <value>
                <fullName>Systest</fullName>
            </value>
            <value>
                <fullName>ProdTest - Selenium</fullName>
            </value>
            <value>
                <fullName>ProdTest - API</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>