force-app/main/default/objects/QA_Test_Case__c/fields/Ftest_Id__c.field-meta.xml
<CustomField>
    <fullName>Ftest_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Ftest Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>