force-app/main/default/objects/QA_Test_Case__c/fields/Hierarchy__c.field-meta.xml
<CustomField>
    <fullName>Hierarchy__c</fullName>
    <label>Hierarchy</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>