force-app/main/default/objects/QA_Test_Case__c/fields/Is_Obsolete__c.field-meta.xml
<CustomField>
    <fullName>Is_Obsolete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Obsolete</label>
    <type>Checkbox</type>
</CustomField>