force-app/main/default/objects/QA_Test_Case__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>R00ND0000001rflAMAQ</relationshipName>
    <type>Lookup</type>
</CustomField>