force-app/main/default/objects/QA_Test_Case__c/validationRules/Order.validationRule-meta.xml
<ValidationRule>
    <fullName>Order</fullName>
    <active>false</active>
    <description>Throw error message when Order is negative</description>
    <errorConditionFormula>Order__c  &lt; 0</errorConditionFormula>
    <errorDisplayField>Order__c</errorDisplayField>
    <errorMessage>Order cannot be Negative</errorMessage>
</ValidationRule>