force-app/main/default/objects/QA_Test_Case__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Brief_Description__c</columns>
    <columns>Hierarchy__c</columns>
    <columns>Priority__c</columns>
    <columns>Manual_Auto_Annotation__c</columns>
    <columns>Is_Obsolete__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>